# ByteWhisperer

./: README.md
C++/: CMakeLists.txt  README.md  conanfile.txt  example.cpp  yolov8.h
CSharp/: CSharp.csproj  CSharp.sln  Program.cs  README.md  packages.config
CSharp/Properties/: AssemblyInfo.cs
Python/: README.md  example.py
